<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="dk.inventy.dk.rollespil.CreateUser">

    <LinearLayout
        android:id="@+id/spinner_create_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_white"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/createUser_layout"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/create_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:inputType="textCapSentences"
        android:gravity="center"
        android:hint="@string/create_name_label"
        android:textSize="25sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/create_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/create_username_label"
        android:inputType="textCapSentences"
        android:textSize="25sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/create_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/create_email_label"
        android:inputType="textEmailAddress"
        android:textSize="25sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/create_mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/create_mobile_label"
        android:inputType="number"
        android:textSize="25sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/create_password_label"
        android:inputType="textPassword"
        android:textSize="25sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_blue"
        android:text="@string/create_button_hint"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    </LinearLayout>


</LinearLayout>
