<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="dk.inventy.dk.rollespil.Login"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/spinner_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/user_hint"
            android:inputType="number"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dark_blue"
            android:text="@string/login_button_hint"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_blue"
            android:text="@string/create_button_hint"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </LinearLayout>
</LinearLayout>