<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="dk.inventy.dk.rollespil.Profile">

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_white"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <dk.inventy.dk.rollespil.CircularImageView
                    android:id="@+id/profile_image"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:src="@drawable/avatar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_id_textview"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/events_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightblue"
                android:text="@string/events_button"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/foreninger_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightgreen"
                android:text="@string/foreninger_button"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/medlemskaber_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightblue"
                android:text="@string/medlemskaber_button"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/billetter_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/lightgreen"
                android:text="@string/billetter_button"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
